spec/src/ksvc/snapshots/kube_do_spec__ksvc__ksvc__default_works.snap
---
source: spec/src/ksvc/ksvc.rs
expression: spec
---
KnativeSpec {
    group: "serving.knative.dev",
    version: "",
    kind: "Service",
    container_name: "my-coder",
    svc_image: "hzgood/my-coder",
    port: "8080",
    env: "",
}
