spec/src/ksvc/snapshots/kube_do_spec__ksvc__ksvc__ksvc_works.snap
---
source: spec/src/ksvc/ksvc.rs
expression: ksvc
---
Ok(
    DynamicObject {
        types: Some(
            TypeMeta {
                api_version: "serving.knative.dev",
                kind: "Service",
            },
        ),
        metadata: ObjectMeta {
            annotations: None,
            cluster_name: None,
            creation_timestamp: None,
            deletion_grace_period_seconds: None,
            deletion_timestamp: None,
            finalizers: None,
            generate_name: None,
            generation: None,
            labels: None,
            managed_fields: None,
            name: Some(
                "my-coder",
            ),
            namespace: None,
            owner_references: None,
            resource_version: None,
            self_link: None,
            uid: None,
        },
        data: Object({
            "spec": Object({
                "template": Object({
                    "spec": Object({
                        "containers": Array([
                            Object({
                                "ports": Array([
                                    Object({
                                        "containerPort": String(
                                            "8080",
                                        ),
                                    }),
                                ]),
                                "image": String(
                                    "hzgood/my-coder",
                                ),
                                "env": String(
                                    "",
                                ),
                            }),
                        ]),
                    }),
                }),
            }),
        }),
    },
)
